--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "aos": "^2.3.4",
+    "dayjs": "^1.11.13",
     "firebase": "^11.10.0",
     "leaflet": "^1.9.4",
     "lottie-react": "^2.4.1",
