--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "aos": "^2.3.4",
+    "axios": "^1.10.0",
     "dayjs": "^1.11.13",
     "firebase": "^11.10.0",
     "leaflet": "^1.9.4",
@@ -25,6 +26,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.3",
     "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.22.2",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
