--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.81.5",
     "aos": "^2.3.4",
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
