--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.3",
     "react-toastify": "^11.0.5",
+    "stripe": "^18.0.0",
     "sweetalert2": "^11.22.2",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
